# Myrax

./: __init__.py  core.py  index.html  main.py  manage_server.html  readme.md  setup.cfg
.github/: FUNDING.yml
discord/: README.md
discord/functions/: message.py  onjoin.py
mxersion/: README.md
