[metadata]
name = myrax
version = 1.0.0
author = myrax
author_email = myrax@myrax.xyz
description = An discord python library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://myrax.xyz
project_urls =
    Docs = https://docs.myrax.xyz
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
